# flopscope

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  pypi-publish.yml
benchmarks/: _contractions.py  _linalg.py  _linalg_delegates.py  _misc.py  _perm_group_calibration.py  _polynomial.py  _window.py  runner.py
docs/migrations/: symmetry-aware-einsum-cost.md
docs/reference/: cost-model.md  empirical-weights.md
examples/: 12_save_load_mlp.py
flopscope-client/: README.md  pyproject.toml
flopscope-client/src/flopscope/: __init__.py  _budget.py  _codec.py  _config.py  _connection.py  _dispatch.py  _display.py  _dtypes.py  _getattr.py  _handles.py  _io.py  _module.py  _perm_group.py  _protocol.py  _registry_data.py  _remote_array.py  _server_only_data.py  _weights.py  accounting.py  errors.py  flops.py  numpy.py
flopscope-client/src/flopscope/linalg/: __init__.py
flopscope-client/src/flopscope/numpy/: __init__.py
flopscope-client/src/flopscope/random/: __init__.py
flopscope-client/src/flopscope/stats/: __init__.py
flopscope-client/tests/: conftest.py  test_adversarial.py  test_api_contract.py  test_api_surface.py  test_array_free.py  test_array_leak_regression.py  test_budget.py  test_budget_timing_integration.py  test_bugfixes_round2.py  test_bugfixes_round3.py  test_codec.py  test_configure_noop.py  test_connection.py  test_dispatch.py  test_display.py  test_dtype_constructors.py  test_error_reexports.py  test_errors.py  test_exhaustive.py  test_full_client_surface_parity.py  test_full_integration.py  test_integration.py  test_io_dispatch_attribution.py  test_io_integration.py  test_module_integration.py  test_no_bare_send_recv_outside_span.py  test_numpy_namespace_errors.py  test_protocol_trace.py  test_remote_callback_error.py  test_remote_generator_integration.py  test_remote_serialization_error.py  test_rng_classes.py  test_server_only_errors.py  test_version_handshake.py  test_weights.py
flopscope-client/tests/fixtures/: full_numpy_surface.json
flopscope-server/: README.md  pyproject.toml
flopscope-server/tests/: conftest.py  test_array_store.py  test_budget_integrity.py  test_bugfixes_round2.py  test_connection_store.py  test_generator_store.py  test_request_handler.py  test_rng_class_dispatch.py  test_server.py  test_session.py  test_version_handshake.py
scripts/: check_version_sync.py  client_parity_inventory.py  generate_api_docs.py  generate_client_surface_snapshot.py  generate_empirical_weights_docs.py  sync_client.py  upload_to_sheets.py
src/flopscope/: __init__.py  _array_ops.py  _budget.py  _config.py  _counting_ops.py  _display.py  _einsum.py  _flops.py  _free_ops.py  _gpu.py  _io.py  _module.py  _ndarray.py  _perm_group.py  _pointwise.py  _polynomial.py  _registry.py  _server_only.py  _sorting_ops.py  _symmetric.py  _symmetry_transport.py  _symmetry_utils.py  _unwrap.py  _weights.py  _window.py  accounting.py  errors.py
tests/: conftest.py  test_accounting.py  test_array_protocols.py  test_benchmark_contractions.py  test_benchmark_linalg.py  test_benchmark_linalg_delegates.py  test_benchmark_misc.py  test_benchmark_polynomial.py  test_benchmark_window.py  test_bilinear_symmetry_propagation.py  test_boundary_ops_cost.py  test_budget.py  test_budget_weights.py  test_check_version_sync.py  test_client_api_coverage.py  test_client_server_parity.py  test_contraction_batch_parity.py  test_contraction_outer_product.py  test_cost_constant_unification.py  test_cost_convention.py  test_cost_formula_vs_code.py  test_cost_model_coverage.py  test_cost_model_page.py  test_counting_ops.py  test_data_movement_free_tier.py  test_docs_generation_hygiene.py  test_einsum.py  test_einsum_integration.py  test_einsum_path_cache.py  test_einsum_routed_binary.py  test_equal_args_integration.py  test_expanded_ops.py  test_fft_free.py  test_fft_transforms.py  test_fft_transforms_extended.py  test_flops_matmul_cost.py  test_fma2_cost_fixes.py  test_fma_cost_function.py  test_fma_unification.py  test_free_ops.py  (+85 more)
tests/accumulation/: test_aggregate_reduction.py  test_build_path_info.py  test_config_budgets.py  test_cost.py  test_deletion_safety.py  test_describe.py  test_einsum_path_no_oracle.py  test_fallback.py  test_js_parity.py  test_path_aware_cost.py  test_path_info.py  test_public_api.py  test_reduction_benchmark.py  test_reduction_helpers.py  test_reduction_properties.py
website/: deployed-docs-recovery.test.mjs  symmetry-explorer.cost-cards.test.mjs  symmetry-explorer.dense-cost.test.mjs  symmetry-guide.test.mjs
(+1694 files in other folders)
